<resources>
    <string name="app_name">Hunt Chat</string>

    <!-- Strings related to firebase -->
    <string name="firebase_user">Users</string>
    <string name="firebase_username">username</string>
    <string name="firebase_displayname">name</string>
    <string name="firebase_add_by_username">addUsername</string>
    <string name="firebase_push">push</string>

    <string name="firebase_friend_requests">friend_requests</string>
    <string name="firebase_fr_id">friends_req_id</string>
    <string name="firebase_fr_seen">seen</string>

    <string name="firebase_friend_list">friend_list</string>
    <string name="firebase_fl_id">fl_id</string>
    <string name="firebasse_fl_added_date">fl_added_date</string>

    <string name="firebase_chat">Chats</string>
    <string name="firebase_chat_type">type</string>
    <string name="firebase_chat_owner">owner</string>
    <string name="firebase_chat_public">publ</string>
    <string name="firebase_chat_authorised">authorised</string>
    <string name="firebase_chat_title">title</string>
    <string name="firebase_chat_location">location</string>
    <string name="firebase_chat_completed">completed</string>
    <string name="firebase_chat_winner">winner</string>

    <string name="firebase_chat_participant">partis</string>
    <string name="firebase_chat_parti_id">id</string>
    <string name="firebase_chat_parti_role">role</string>

    <string name="firebase_chat_message">messages</string>
    <string name="firebase_chat_msg_content">content</string>
    <string name="firebase_chat_msg_timestamp">timestamp</string>
    <string name="firebase_chat_msg_type">type</string>
    <string name="firebase_chat_msg_id">id</string>

    <string name="firebase_longitude">lon</string>
    <string name="firebase_latitude">lat</string>

    <!-- Constants for chat type -->
    <string name="chat_type_chat">1</string>
    <string name="chat_type_game">2</string>
    <string name="chat_pass_type">TYPE</string>
    <string name="chat_pass_id">ID</string>

    <!-- Strings related to participant type -->
    <string name="chat_parti_host">1</string>
    <string name="chat_parti_friend">2</string>
    <string name="chat_parti_hunter">3</string>
    <string name="chat_parti_analyser">4</string>

    <!-- Strings related to message type -->
    <string name="chat_msg_normal">1</string>
    <string name="chat_msg_clue">2</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_taken_username">This username is already taken</string>
    <string name="error_password_not_match">The password entered does not match</string>
    <string name="error_password_constraint">Password must be at least 8 characters long with at least one uppercase, one lowercase and one digit</string>

    <string name="version">v 1.0</string>
    <string name="register">Newbie? Register here!</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="title_username">Username</string>
    <string name="default_username">johnSmith123</string>
    <string name="title_email">Email</string>
    <string name="default_email">john_smith@gmail.com</string>
    <string name="title_password">Password</string>
    <string name="title_password_confirm">Confirm password</string>
    <string name="title_profilePic">Upload profile picture</string>
    <string name="title_pushNoti">Allow push notification for public game</string>
    <string name="register_btn">Join!</string>

    <string name="title_new_password">New password</string>
    <string name="title_new_password_confirm">Confirm new password</string>

    <string name="title_activity_tabbed">Hunt Chat</string>
    <string name="action_settings">Settings</string>
    <string name="permission_denied">Permission denied, the application might not work as expected.</string>

    <string name="save_changes">Save changes</string>
    <string name="confirm">Confirm</string>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="settings_display_name">Change your display name</string>
    <string name="settings_username">Change your user name</string>
    <string name="settings_email">Change your email address</string>
    <string name="settings_password">Change your password</string>

    <!-- Strings related to add friend -->
    <string name="friend_request">Friend Request</string>
    <string name="friends_add">Add Friend by Username</string>
    <string name="my_username">My username: </string>
    <string name="username_does_not_exist">There is not user found with the username entered</string>
    <string name="add">Add</string>
    <string name="send_friend_req">Friend request sent</string>
    <string name="send_friend_req_new">A new friend request sent</string>

    <!-- Strings related to friends -->
    <string name="friend_list">Friend list</string>

    <!-- Strings related to location -->
    <string name="open_gps_title">Please enable the GPS for the application to work properly</string>
    <string name="open_gps_positive">OK</string>
    <string name="open_gps_negative">Cancel</string>
    <string name="open_gps_denied">The application doesnt work well without the GPS</string>
    
    <!-- Strings related to game -->
    <string name="game_create_new">Create a new game</string>
    <string name="game_title">Hunt title</string>
    <string name="game_image_clue">Upload your image clue: </string>
    <string name="game_group_profile">This will be the group profile picture.</string>
    <string name="game_authorised_access">Authorised access</string>
    <string name="game_public_game">Public game</string>
    <string name="game_create">Create game</string>
    <string name="game_join">Join</string>
    <string name="game_nearby">Nearby Games</string>
    <string name="game_friends">Friends Games</string>
    <string name="game_hunter">Hunter</string>
    <string name="game_spectator">Spectator</string>
    <string name="game_select_option">Please select your role: </string>
    <string name="game_option_complete">Mark as complete</string>
    <string name="game_msg_complate">Game completed</string>

</resources>
