<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kelly.hunt_chat.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Register" />

        <TextView
            android:id="@+id/reg_text_dislayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/reg_text_register"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pref_title_display_name" />

        <EditText
            android:id="@+id/reg_input_displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_text_dislayName"
            android:layout_alignStart="@+id/reg_text_dislayName"
            android:layout_below="@+id/reg_text_dislayName"
            android:inputType="textPersonName"
            android:hint="@string/pref_default_display_name" />

        <TextView
            android:id="@+id/reg_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_input_displayName"
            android:layout_alignStart="@+id/reg_input_displayName"
            android:layout_below="@+id/reg_input_displayName"
            android:layout_marginTop="10dp"
            android:text="@string/title_username" />

        <EditText
            android:id="@+id/reg_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_text_username"
            android:layout_alignStart="@+id/reg_text_username"
            android:layout_below="@+id/reg_text_username"
            android:inputType="textPersonName"
            android:hint="@string/default_username" />

        <TextView
            android:id="@+id/reg_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_input_username"
            android:layout_alignStart="@+id/reg_input_username"
            android:layout_below="@+id/reg_input_username"
            android:layout_marginTop="10dp"
            android:text="@string/title_email" />

        <EditText
            android:id="@+id/reg_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_text_email"
            android:layout_alignStart="@+id/reg_text_email"
            android:layout_below="@+id/reg_text_email"
            android:inputType="textEmailAddress"
            android:hint="@string/default_email" />

        <TextView
            android:id="@+id/reg_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_input_email"
            android:layout_alignStart="@+id/reg_input_email"
            android:layout_below="@+id/reg_input_email"
            android:layout_marginTop="10dp"
            android:text="@string/title_password" />

        <EditText
            android:id="@+id/reg_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_text_password"
            android:layout_alignStart="@+id/reg_text_password"
            android:layout_below="@+id/reg_text_password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reg_text_profilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_input_password"
            android:layout_alignStart="@+id/reg_input_password"
            android:layout_below="@+id/reg_input_password"
            android:layout_marginTop="10dp"
            android:text="@string/title_profilePic" />

        <ImageButton
            android:id="@+id/reg_btn_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/reg_text_profilePic"
            android:layout_centerHorizontal="true"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/reg_text_pushNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_text_profilePic"
            android:layout_alignStart="@+id/reg_text_profilePic"
            android:layout_below="@+id/reg_btn_image"
            android:layout_marginTop="10dp"
            android:text="@string/title_pushNoti" />

        <Switch
            android:id="@+id/reg_input_pushNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/reg_text_pushNoti"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            android:text="" />

        <Button
            android:id="@+id/reg_btn_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/reg_text_pushNoti"
            android:text="@string/register_btn"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/reg_text_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reg_btn_register"
            android:layout_alignStart="@+id/reg_btn_register"
            android:layout_below="@+id/reg_btn_register"
            android:text="Existing user? Sign in here!"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>