<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kelly.hunt_chat.Settings_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/settings_password_tabbed_0"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="@color/lightGrey"/>

        <EditText
            android:id="@+id/settings_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_password_tabbed_0"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/title_password"/>

        <View
            android:id="@+id/settings_password_tabbed_1"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/settings_password_input"
            android:background="@color/lightGrey"/>


        <EditText
            android:id="@+id/settings_password_input_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_password_tabbed_1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/title_password_confirm"/>

        <View
            android:id="@+id/settings_password_tabbed_2"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/settings_password_input_confirm"
            android:background="@color/lightGrey"/>

        <Button
            android:id="@+id/settings_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/settings_password_tabbed_2"
            android:layout_gravity="start"
            android:background="@color/windowBackground"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:textStyle="normal"/>

        <View
            android:id="@+id/settings_password_tabbed_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/settings_password_button"
            android:background="@color/lightGrey"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
